WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131426
AX: Make AXPress much more reliable on the Web
https://bugs.webkit.org/show_bug.cgi?id=131426
Summary
AX: Make AXPress much more reliable on the Web
chris fleizach
Reported
2014-04-08 21:57:48 PDT
AXPress fails when trying to select a TV provider from
http://www.cnn.com/video/data/2.0/video/cvptve/cvpstream1.html
We need to make AXPress more reliable by 1) Using the element that is focused as the target of the event 2) Search for the inner mode control object when dispatching the event
Attachments
patch
(13.41 KB, patch)
2014-04-08 22:02 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(13.65 KB, patch)
2014-04-08 23:47 PDT
,
chris fleizach
mario
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-04-08 21:57:57 PDT
<
rdar://problem/16562107
>
chris fleizach
Comment 2
2014-04-08 22:02:17 PDT
Created
attachment 228934
[details]
patch
chris fleizach
Comment 3
2014-04-08 23:47:35 PDT
Created
attachment 228947
[details]
patch
WebKit Commit Bot
Comment 4
2014-04-08 23:48:56 PDT
Attachment 228947
[details]
did not pass style-queue: ERROR: Source/WebCore/accessibility/AccessibilityObject.cpp:42: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mario Sanchez Prada
Comment 5
2014-04-09 07:53:01 PDT
Comment on
attachment 228947
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228947&action=review
> Source/WebCore/accessibility/AccessibilityObject.cpp:42 > +#include "HitTestResult.h"
This placement seems to make the style checker unhappy
> Source/WebCore/accessibility/AccessibilityObject.cpp:723 > + // The presencen of the actionElement will confirm whether we should even attempt a press.
s/presencen/presence
> Source/WebCore/accessibility/AccessibilityObject.cpp:750 > + Element* element = this->element(); > + Element* pressElement = element;
You can use just one variable here, pressElement, assigned to this->element()
chris fleizach
Comment 6
2014-04-09 11:42:49 PDT
http://trac.webkit.org/changeset/167024
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug