AX: Make AXPress much more reliable on the Web https://bugs.webkit.org/show_bug.cgi?id=131426

Reviewed by Mario Sanchez Prada.

Source/WebCore:

AXPress fails when an event handler is on a node higher in the parent chain than the focused node.

We need to make AXPress more reliable by
    1) Using the element that is focused as the target of the event
    2) Search for the inner most control object when dispatching the event

Updated existing accessibility/press-works-on-control-types.html

* accessibility/AccessibilityMenuList.cpp:
(WebCore::AccessibilityMenuList::press):
* accessibility/AccessibilityMenuList.h:
* accessibility/AccessibilityMenuListPopup.cpp:
(WebCore::AccessibilityMenuListPopup::press):
* accessibility/AccessibilityMenuListPopup.h:
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::press):
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::performDefaultAction):
* accessibility/AccessibilitySearchFieldButtons.cpp:
(WebCore::AccessibilitySearchFieldCancelButton::press):
* accessibility/AccessibilitySearchFieldButtons.h:
* accessibility/AccessibilitySpinButton.cpp:
(WebCore::AccessibilitySpinButtonPart::press):
* accessibility/AccessibilitySpinButton.h:

LayoutTests:

* accessibility/press-works-on-control-types-expected.txt:
* accessibility/press-works-on-control-types.html:



Canonical link: https://commits.webkit.org/149509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167024 268f45cc-cd09-0410-ab3c-d52691b4dbfc