Source/WebCore/accessibility/AccessibilitySpinButton.cpp
@@ -130,7 +130,7 @@ LayoutRect AccessibilitySpinButtonPart::elementRect() const
     return parentRect;
 }
 
-bool AccessibilitySpinButtonPart::press() const
+bool AccessibilitySpinButtonPart::press()
 {
     if (!m_parent || !m_parent->isSpinButton())
         return false;
